--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,173 +1,113 @@
 trigger:
   branches:
     include:
-      - main
+      - main  # Replace with your target branch name
+
+variables:
+  ZIP_NODE: 'rock-entity-header_product_thing_uiConfig.json'  # Replace with your desired file name
 
 stages:
-- stage: Publish_Zip_File
-  displayName: 'Publish Zip File'
-  jobs:
-  - job: Publish_Zip_File_Job
+  - stage: Publish_Zip_File
     displayName: 'Publish Zip File'
-    pool:
-      vmImage: 'ubuntu-latest'
-    steps:
-    - checkout: self
+    jobs:
+      - job: Publish_Zip_File_Job
+        displayName: 'Publish Zip File'
+        pool:
+          vmImage: 'ubuntu-latest'
+        steps:
+          - checkout: self
 
-    - task: ArchiveFiles@2
-      inputs:
-        rootFolderOrFile: '10-json/110-uiconfig/1106-entitytype/rock-entity-header_product_thing_uiConfig.json'  # Replace with the path to your folder in the repository
-        includeRootFolder: true
-        archiveType: 'zip'
-        archiveFile: '$(Build.ArtifactStagingDirectory)/files.zip'
+          - task: ArchiveFiles@2
+            inputs:
+              rootFolderOrFile: '10-json/110-uiconfig/1106-entitytype/$(ZIP_NODE)'  # Replace with the path to your folder in the repository
+              includeRootFolder: true
+              archiveType: 'zip'
+              archiveFile: '$(Build.ArtifactStagingDirectory)/files.zip'
 
-    - task: PublishPipelineArtifact@1
-      inputs:
-        targetPath: '$(Pipeline.Workspace)'
-        artifactName: 'new_artifact'  # Replace with your desired artifact name
-        publishLocation: 'pipeline'
+          - task: PublishPipelineArtifact@1
+            inputs:
+              targetPath: '$(Pipeline.Workspace)'
+              artifactName: 'files'  # Replace with your desired artifact name
+              publishLocation: 'pipeline'
 
-- stage: Initialization
-  displayName: 'Initialization...'
-  dependsOn: Publish_Zip_File
-  jobs:
-  - job: InitializationJob
-    displayName: 'Initialization Job'
-    pool:
-      vmImage: 'ubuntu-latest'
-    steps:
-    - script: |
-        jsonIncludefilepath="$(Build.SourcesDirectory)/deployment-artifacts/includedfile.json"
-        zipfilepath="$(Build.SourcesDirectory)/$(Build.SourceBranch | tr / .).zip"
-        zip_workflowfilepath="$(Build.SourcesDirectory)/postdeployment.zip"
-
-        echo "jsonIncludefilepath: $jsonIncludefilepath"
-        echo "zipfilepath: $zipfilepath"
-        echo "zip_workflowfilepath: $zip_workflowfilepath"
-      displayName: 'Initialize variables'
-
-- stage: PreparePackage
-  displayName: 'prepare-package'
-  dependsOn: Initialization
-  jobs:
-  - job: PreparePackageJob
-    displayName: 'Prepare Package Job'
-    pool:
-      vmImage: 'ubuntu-latest'
-    steps:
-    - script: |
-        includedFilenamesString='[{"filename":"rock-entity-header_product_thing_uiConfig.json"}]'
-        
-        echo "includedFilenamesString: $includedFilenamesString"
-
-        if [[ $includedFilenamesString == *","* ]]; then
-          IFS=',' read -ra includedFilenames <<< "$includedFilenamesString"
-          for includedFilename in "${includedFilenames[@]}"; do
-            includedFilename=$(echo $includedFilename | tr -d '[]')
-            includedfile+="$(Build.SourcesDirectory)/$includedFilename,"
-          done
-          includedfile=${includedfile::-1}
-          echo "Final included files: $includedfile"
-        else
-          includedfile="$(Build.SourcesDirectory)/$includedFilenamesString"
-          echo "No comma present: $includedfile"
-        fi
-
-        echo "Final included files: $includedfile"
-        echo "Filenames processed successfully... Moving to zipping.."
-
-        rm -f $zipfilepath
-        zip -r $zipfilepath $includedfile
-        if [ ! -f $zipfilepath ]; then
-          echo "Failed to create the zip file."
-          exit 1
-        else
-          echo "Files zipped successfully..."
-        fi
-      displayName: 'Prepare package'
-
-# The rest of the stages and jobs remain the same...
-
-- stage: CreatingFolder
-  displayName: 'creating folder'
-  dependsOn: PreparePackage
-  jobs:
-  - job: CreatingFolderJob
-    displayName: 'Creating Folder Job'
-    pool:
-      vmImage: 'ubuntu-latest'
-    steps:
-    - script: |
-        jsonobject=$(echo "{\"binaryStreamObject\":{\"id\":\"guid\",\"type\":\"seedDataStream\",\"properties\":{\"objectKey\":\"$(Build.SourceBranch | tr / .)\",\"originalFileName\":\"$(Build.SourceBranch | tr / .)\"}}}")
-        
-        curl -X POST \
-          -H "Content-Type: application/json" \
-          -H "x-rdp-version: 8.1" \
-          -H "x-rdp-tenantId: etronds" \
-          -H "x-rdp-clientId: rdpclient" \
-          -H "x-rdp-userId: etronds.systemadmin@riversand.com" \
-          -H "x-rdp-userRoles: systemadmin" \
-          -H "auth-client-id: j29DTHa7m7VHucWbHg7VvYA75pUjBopS" \
-          -H "auth-client-secret: J7UaRWQgxorI8mdfuu8y0mOLqzlIJo2hM3O4VfhX1PIeoa7CYVX_l0-BnHRtuSWB" \
-          -d "$jsonobject" \
-          https://etronds.riversand.com/api/binarystreamobjectservice/prepareUpload
-      displayName: 'Creating folder'
-
-# The remaining stages and jobs continue...
-
-- stage: DeployingFolder
-  displayName: 'Deploying folder'
-  dependsOn: CreatingFolder
-  jobs:
-    - job: DeployingFolderJob
-      displayName: 'Deploying Folder Job'
-      pool:
-        vmImage: 'ubuntu-latest'
-      steps:
-      - script: |
-          echo "==== Deploying folder ===="
           
-          encodedFileuploadUrl=$(echo $fileuploadUrl | sed 's/%/%%/g')
-          zipNode=$(echo "$(Build.SourceBranch)" | tr / .)
+            displayName: 'Publish Zip File'
 
-          curl -v -X PUT $encodedFileuploadUrl \
-            -H "x-ms-meta-x_rdp_userroles: systemadmin" \
-            -H "x-ms-meta-x_rdp_tenantid: etronds" \
-            -H "x-ms-meta-originalfilename: $zipNode" \
-            -H "x-ms-blob-content-disposition: attachment; filename=$zipNode" \
-            -H "x-ms-meta-type: disposition" \
-            -H "x-ms-meta-x_rdp_clientid: rdpclient" \
-            -H "x-ms-meta-x_rdp_userid: etronds.systemadmin@riversand.com" \
-            -H "x-ms-meta-binarystreamobjectid: guid" \
-            -H "x-ms-blob-type: BlockBlob" \
-            -H "Content-Type: application/zip" \
-            --data-binary "@$zipfilepath"
-        
-        displayName: 'Deploy folder'
+  - stage: Get_Upload_URL
+    displayName: 'Get Upload URL'
+    jobs:
+      - job: Get_Upload_URL_Job
+        displayName: 'Get Upload URL'
+        pool:
+          vmImage: 'ubuntu-latest'
+        steps:
+          - checkout: self
 
-- stage: DeploymentIntoTenant
-  displayName: 'Deployment into tenant'
-  dependsOn: DeployingFolder
-  jobs:
-  - job: DeploymentIntoTenantJob
-    displayName: 'Deployment into Tenant Job'
-    pool:
-      vmImage: 'ubuntu-latest'
-    steps:
-    - script: |
-        echo "==== Deployment ===="
+          - script: |
+              jsonobject='{"binaryStreamObject":{"id":"guid","type":"seedDataStream","properties":{"objectKey":"$(ZIP_NODE)","originalFileName":"$(ZIP_NODE)"}}}'
+              prepareUploadResponse=$(curl -X POST \
+                -H 'Content-Type: application/json' \
+                -H 'x-rdp-version: 8.1' \
+                -H 'x-rdp-tenantId:etronds' \
+                -H 'x-rdp-clientId: rdpclient' \
+                -H 'x-rdp-userId: etronds.systemadmin@riversand.com' \
+                -H 'x-rdp-userRoles: systemadmin' \
+                -H 'auth-client-id: j29DTHa7m7VHucWbHg7VvYA75pUjBopS' \
+                -H 'auth-client-secret: J7UaRWQgxorI8mdfuu8y0mOLqzlIJo2hM3O4VfhX1PIeoa7CYVX_l0-BnHRtuSWB' \
+                -d "$jsonobject" \
+                'https://etronds.riversand.com/api/binarystreamobjectservice/prepareUpload')
 
-        jsonobject=$(echo "{\"adminObject\":{\"id\":\"someguid\",\"type\":\"adminObject\",\"properties\":{\"flushConfig\":false,\"storageType\":\"stream\",\"objectKey\":\"$(Build.SourceBranch | tr / .)\",\"tenantId\":\"etronds\",\"retryCount\":1,\"sleepTime\":1000}}}")
-        
-        curl -X POST \
-          -H "Content-Type: application/zip" \
-          -H "x-rdp-version: 8.1" \
-          -H "x-rdp-clientId: rdpclient" \
-          -H "x-rdp-userId: etronds.systemadmin@riversand.com" \
-          -H "x-rdp-userRoles: systemadmin" \
-          -H "auth-client-id: j29DTHa7m7VHucWbHg7VvYA75pUjBopS" \
-          -H "auth-client-secret: J7UaRWQgxorI8mdfuu8y0mOLqzlIJo2hM3O4VfhX1PIeoa7CYVX_l0-BnHRtuSWB" \
-          -d "$jsonobject" \
-          "https://etronds.riversand.com/api/adminservice/deploytenantseed"
+              uploadURL=$(echo "$prepareUploadResponse" | jq -r '.response.binaryStreamObjects[0].properties.uploadURL')
 
-      displayName: 'Deployment'
+              echo "Upload URL: $uploadURL"
+            displayName: 'Create Folder'          
+
+  - stage: Deploy_File
+    displayName: 'Deploy File'
+    jobs:
+      - job: Deploy_File_Job
+        displayName: 'Deploy File'
+        pool:
+          vmImage: 'ubuntu-latest'
+        steps:
+          - script: |
+              curl -v -X PUT "$uploadURL" \
+                --header "x-ms-meta-x_rdp_userroles: systemadmin" \
+                --header "x-ms-meta-x_rdp_tenantid: etronds" \
+                --header "x-ms-meta-originalfilename: $(ZIP_NODE)" \
+                --header "x-ms-blob-content-disposition: attachment; filename=$(ZIP_NODE)" \
+                --header "x-ms-meta-type: disposition" \
+                --header "x-ms-meta-x_rdp_clientid: rdpclient" \
+                --header "x-ms-meta-x_rdp_userid: etronds.systemadmin@riversand.com" \
+                --header "x-ms-meta-binarystreamobjectid: guid" \
+                --header "x-ms-blob-type: BlockBlob" \
+                --header "Content-Type: application/zip" \
+                --data-binary "@$(Build.ArtifactStagingDirectory)/files.zip"
+
+              echo "Folder deployed successfully."
+            displayName: 'Deploy Folder'
+
+  - stage: Get_Details_From_Tenant
+    displayName: 'Get Details From Tenant'
+    jobs:
+      - job: Get_Details_From_Tenant_Job
+        displayName: 'Get Details From Tenant'
+        pool:
+          vmImage: 'ubuntu-latest'
+        steps:
+          - script: |
+             jsonobject='{"adminObject":{"id":"someguid","type":"adminObject","properties":{"flushConfig":false,"storageType":"stream","objectKey":"$(ZIP_NODE)","tenantId":"etronds","retryCount":1,"sleepTime":1000}}}'
+             deploymentResponse=$(curl -X POST \
+              -H 'Content-Type: application/json' \
+              -H 'x-rdp-version: 8.1' \
+              -H 'x-rdp-tenantId:etronds' \
+              -H 'x-rdp-clientId: rdpclient' \
+              -H 'x-rdp-userId: etronds.systemadmin@riversand.com' \
+              -H 'x-rdp-userRoles: systemadmin' \
+              -H 'auth-client-id: j29DTHa7m7VHucWbHg7VvYA75pUjBopS' \
+              -H 'auth-client-secret: J7UaRWQgxorI8mdfuu8y0mOLqzlIJo2hM3O4VfhX1PIeoa7CYVX_l0-BnHRtuSWB' \
+              -d "$jsonobject" \
+              'https://etronds.riversand.com/api/adminservice/deploytenantseed')
+
+             echo "$deploymentResponse"
+            displayName: 'Deployment'
