--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,14 +37,12 @@ stages:
     jobs:
       - job: Get_Upload_URL_Job
         displayName: 'Get Upload URL'
-        pool:
-          vmImage: 'ubuntu-latest'
         steps:
           - checkout: self
 
           - script: |
               # Define the JSON request body
-              jsonBody='{"binaryStreamObject": {"id": "guid","type": "seedDataStream","properties": {"objectKey": "drop.zip","originalFileName": "drop.zip"}}}'
+              jsonBody='{"binaryStreamObject": {"id": "guid","type": "seedDataStream","properties": {"objectKey": "my_artifact.zip","originalFileName": "my_artifact.zip"}}}'
               # Make the POST request and store the response in a variable
               response=$(curl -X POST \
                 -H "Content-Type: application/json" \
@@ -79,15 +77,15 @@ stages:
               curl -v -X PUT "$uploadURL" \
                 --header "x-ms-meta-x_rdp_userroles: systemadmin" \
                 --header "x-ms-meta-x_rdp_tenantid: etronds" \
-                --header "x-ms-meta-originalfilename: drop.zip" \
-                --header "x-ms-blob-content-disposition: attachment; filename=drop.zip" \
+                --header "x-ms-meta-originalfilename: my_artifact.zip" \
+                --header "x-ms-blob-content-disposition: attachment; filename=my_artifact.zip" \
                 --header "x-ms-meta-type: disposition" \
                 --header "x-ms-meta-x_rdp_clientid: rdpclient" \
                 --header "x-ms-meta-x_rdp_userid: etronds.systemadmin@riversand.com" \
                 --header "x-ms-meta-binarystreamobjectid: guid" \
                 --header "x-ms-blob-type: BlockBlob" \
                 --header "Content-Type: application/zip" \
-                --data-binary "@$(Build.ArtifactStagingDirectory)/my_artifact/"
+                --data-binary "@$(Build.ArtifactStagingDirectory)/my_artifact.zip"
 
               echo "Folder deployed successfully."
             displayName: 'Deploy Folder'
@@ -101,7 +99,7 @@ stages:
           vmImage: 'ubuntu-latest'
         steps:
           - script: |
-             jsonobject='{"adminObject":{"id":"someguid","type":"adminObject","properties":{"flushConfig":false,"storageType":"stream","objectKey":"drop.zip","tenantId":"etronds","retryCount":1,"sleepTime":1000}}}'
+             jsonobject='{"adminObject":{"id":"someguid","type":"adminObject","properties":{"flushConfig":false,"storageType":"stream","objectKey":"my_artifact.zip","tenantId":"etronds","retryCount":1,"sleepTime":1000}}}'
              deploymentResponse=$(curl -X POST \
               -H 'Content-Type: application/json' \
               -H 'x-rdp-version: 8.1' \
@@ -113,6 +111,11 @@ stages:
               -H 'auth-client-secret: J7UaRWQgxorI8mdfuu8y0mOLqzlIJo2hM3O4VfhX1PIeoa7CYVX_l0-BnHRtuSWB' \
               -d "$jsonobject" \
               'https://etronds.riversand.com/api/adminservice/deploytenantseed')
-
              echo "$deploymentResponse"
+             status=$(echo "$deploymentResponse" | jq -r '.deploymentResponse.binaryStreamObjects[0].data.properties.status')
+             taskId=$(echo "$deploymentResponse" | jq -r '.deploymentResponse.binaryStreamObjects[0].data.properties.taskId')
+              
+             echo "Status: $status"
+             echo "Task ID: $taskId"
+             
             displayName: 'Deployment'
